--- a/estilo/style.css
+++ b/estilo/style.css
@@ -54,7 +54,7 @@ header > h1 {
 
 header > p {
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
